for the first time i dont feel THAT bad about myself

--- a/week-01/day-4/changeelement/CMakeLists.txt
+++ b/week-01/day-4/changeelement/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.13)
-project(projekt1)
+project(changeelement)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(projekt1 doubling.cpp)
+add_executable(changeelement main.cpp)
