--- a/week-07/day-2/pi/CMakeLists.txt
+++ b/week-07/day-2/pi/CMakeLists.txt
@@ -3,4 +3,4 @@ project(pi C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(pi main.c)
+add_executable(pi main.c area_and_circumference.c area_and_circumference.h)
